V2.3.2 (BETA)
----------------------------------------------------------------------------------------------------
 * Add key usage extensions to fallback certificates; correct other extensions.
 * Correct decoding of IP addresses in certificates.
 * Add contrib directory (not yet shipped).
 * Add SeLinux policy changes necessary for mod_md in contrib/selinux.
 * `MDNotifyCmd` and `MDMessageCmd` now get the environment variable `MD_STORE` containing
    the path to the storage directory.
    Also `MD_VERSION` is added to the environment, containing the version plus an optional
    `-variation`, e.g. `-git` indicator.
 * Added very preliminary (and rough) version of contrib/md_events script.
 * test suite: test of Messages less timing dependant

V2.3.1 (BETA)
----------------------------------------------------------------------------------------------------
 * The keyname in key and certificate files is now forced lower case.
 * Formatting in 'server-status' page has been improved when showing >1 certificates
 * Fallback certificates (when the domain has none yet) are now generated for all 
   key types requested in MDPrivateKeys of that domain.
 * Update /.httpd/certificate-status to correctly handle multiple keys.

v2.3.0 (BETA)
----------------------------------------------------------------------------------------------------
 * MDPrivateKeys checks for duplicate key specifications. There can only be one RSA key
   and a curve name can also only appear once.
 * Test case for curve "x25519" is being skipped as this key does not work correctly - yet.
 * Added more EC and dual keys tests. Tests now verify that the correct certificate is
   used when the client is limited in protocol version and ciphers.
 * Tests run with multiple certificates. Certificates are listed in status reports. The
   "server-status" html table gives individual links. Expiry durations are aggregated.
   OCSP stapling picks up the new certificates nicely.